# stm32-cubemx-l3g4200d

./: .gitmodules  CMakeLists.txt  stm32-cubemx-l3g4200d.ioc
Core/Src/: gpio.c
app/l3g4200d/: CMakeLists.txt  l3g4200d.cpp  l3g4200d.hpp  l3g4200d_config.hpp  l3g4200d_registers.hpp
app/main/: CMakeLists.txt  main.cpp
